tests/baselines/reference/nestedClassDeclaration.errors.txt
tests/cases/conformance/classes/nestedClassDeclaration.ts(5,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(7,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(10,5): error TS1129: Statement expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(12,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,11): error TS1005: ':' expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,14): error TS1005: ',' expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,14): error TS1165: A destructuring declaration must have an initializer.
tests/cases/conformance/classes/nestedClassDeclaration.ts(17,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/nestedClassDeclaration.ts(15,11): error TS2304: Cannot find name 'C4'.


==== tests/cases/conformance/classes/nestedClassDeclaration.ts (9 errors) ====
    // nested classes are not allowed
    
    class C {
        x: string;
        class C2 {
        ~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    function foo() {
        class C3 {
        ~~~~~
!!! error TS1129: Statement expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var x = {
        class C4 {
              ~~
!!! error TS1005: ':' expected.
                 ~
!!! error TS1005: ',' expected.
                 ~
              ~~
!!! error TS2304: Cannot find name 'C4'.
        }
    ~~~~~
!!! error TS1165: A destructuring declaration must have an initializer.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    